# ETL_pipeline

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pgbouncer.ini  processed_files.txt  prometheus.yml  pyproject.toml  run_tasks_from_json.py  tasks_config.json  test.py  test_product.py  test_weaviate.py  test_xlsx.ipynb  userlist.txt
alembic/: env.py
alembic/versions/: 3ea71ce71e00_test.py  bf1bf47dff91_new_revision.py  e7cf814d081f_fresh_migration.py
src/config/: postgres_config.py
src/controller/: docling_controller.py  document_controller.py  postgres_controller.py  product_controller.py  struct_to_pg.py  structured_data_controller copy.py  structured_data_controller.py  weaviate_controller.py
src/schemas/: agentic.py  file_loader.py  models_organization.py  models_person.py  weaviate.py
src/utils/: chunker.py  file_loader.py  weaviate_monitoring.py
src/utils/data_processor/: product_data.py
src/utils/extractor/: docling_utils.py
src/utils/relationalDB/: postgres_utils.py
src/utils/structToDB/: process copy.py  process.py  process_multi_table_in_sheet.py  process_multi_xlsx_to_single_table.py  (+1 more)
test/: test_business_data.py  test_document.py  test_manufacture.py  test_paper_data.py  test_person_data copy.py  test_person_data.py  test_postgres.py  test_product.py  test_product_history.py  test_product_spec.py  test_regulation.py  test_sales_activity_data.py  test_sales_history_data.py  test_sales_history_other_sheets.py  test_salesdata_ingest.py  test_struct_to_db.py  test_vector_search.py  test_weaviate.py  test_xlsx.py
(+1 files in other folders)
